<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDC9C"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/headerGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/perfil_header_mascota"
                android:visibility="visible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/perfil_header_logo"
                android:visibility="visible" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="@drawable/perfil_panel_bg" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="65dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fondo_imagenes" />

                <ImageView
                    android:id="@+id/photoUserBookie"
                    android:layout_width="115dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/prueba" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/perfil_panel_foto_bg"
                    android:paddingLeft="20dp" />
            </RelativeLayout>

            <com.example.dmc.layoutexercise.utils.CustomStrokeTextView
                android:id="@+id/userGameCreditTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="175dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/tryy"
                android:gravity="right"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="12345"
                android:textColor="#FFF"
                android:textSize="23sp"
                android:textStyle="bold"
                app:customFont="fonts/Dimbo_Regular.ttf"
                app:outlineColor="#000000"
                app:outlineSize="2dp" />


            <com.example.dmc.layoutexercise.utils.CustomTextView
                android:id="@+id/x2MultiplierText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="109dp"
                android:background="@drawable/perfil_panel_gratis_bg"
                android:paddingLeft="40dp"
                android:paddingTop="5dp"
                android:text="@string/periodic_credit"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:customFont="fonts/Dimbo_Regular.ttf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="185dp"
                android:text="@string/name_twopoints" />

            <com.example.dmc.layoutexercise.utils.CustomTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="202dp"
                android:text="ANA FERNÁNDEZ"
                android:textSize="14sp"
                app:customFont="fonts/OpenSans-Bold.ttf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="90dp"
                android:layout_marginTop="185dp"
                android:text="@string/years_twopoints" />

            <com.example.dmc.layoutexercise.utils.CustomTextView
                android:id="@+id/years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="67dp"
                android:layout_marginTop="202dp"
                android:text="35 AÑOS"
                android:textSize="14sp"
                app:customFont="fonts/OpenSans-Bold.ttf" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="235dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/invitar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_invitar" />

                <ImageButton
                    android:id="@+id/ranking_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_ranking_state" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/new_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="318dp"
                android:background="@drawable/button_new_game_state" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="400dp"
                android:background="@drawable/perfil_guaper_panel_bg">


                <com.example.dmc.layoutexercise.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/perfil_mensaje_bg"
                    android:paddingTop="6dp"
                    android:text="@string/discover"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:customFont="fonts/OpenSans-Bold.ttf" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="120dp"
                        android:orientation="vertical">

                        <com.example.dmc.layoutexercise.utils.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/total_votes"
                            android:textAlignment="center"
                            android:textColor="#58564C"
                            android:textSize="19sp"
                            app:customFont="fonts/Dimbo_Regular.ttf"  />

                        <com.example.dmc.layoutexercise.utils.CustomTextView
                            android:id="@+id/total_votesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/perfil_guaper_panel_datos_bg"
                            android:gravity="center"
                            android:text="--"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            app:customFont="fonts/Dimbo_Regular.ttf" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="120dp"
                        android:orientation="vertical">

                        <com.example.dmc.layoutexercise.utils.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/score_get"
                            android:textColor="#58564C"
                            android:textAlignment="center"
                            android:textSize="19sp"
                            app:customFont="fonts/Dimbo_Regular.ttf" />

                        <com.example.dmc.layoutexercise.utils.CustomTextView
                            android:id="@+id/score_TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/perfil_guaper_panel_datos_bg"
                            android:gravity="center"
                            android:text="--"
                            android:textColor="#58564C"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            app:customFont="fonts/OpenSans-Bold.ttf" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/guaper_Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="625dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/do_guaper_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_do_guaper_profile"/>

                <com.example.dmc.layoutexercise.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="210dp"
                    android:text="@string/do_guaper"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:customFont="fonts/OpenSans-Bold.ttf" />

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>